fixed quotes and removed all scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,3 +137,13 @@
 @utility no-scrollbar {
 	@apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
 }
+
+body {
+	scrollbar-width: none; /* Firefox */
+	-ms-overflow-style: none; /* IE and Edge */
+	overflow: auto;
+}
+
+body::-webkit-scrollbar {
+	display: none; /* Chrome, Safari, Opera */
+}
